--- a/Dockers/R/Dockerfile
+++ b/Dockers/R/Dockerfile
@@ -7,7 +7,7 @@ FROM rocker/tidyverse:3.6.0
 ## RUN echo "r <- getOption('repos'); r['CRAN'] <- 'http://cran.us.r-project.org'; options(repos = r);" > ~/.Rprofile
 
 RUN Rscript -e "install.packages('BiocManager')"
-RUN Rscript -e "BiocManager::install("WGCNA")"
+RUN Rscript -e "BiocManager::install('WGCNA')"
 
 ## install.packages("BiocManager") 
 ## BiocManager::install("WGCNA") 
